--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".views.MemberListActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/member_list_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:elevation="4dp"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
