Prep list view for MemberListActivity
Built a list item layout, included visual resources for user
profile photos and member level badges. Adde list adapter (not yet used).
Adding some empty layout skeleton items in this commit.

--- a/app/src/main/res/layout/activity_add_member.xml
+++ b/app/src/main/res/layout/activity_add_member.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".views.AddMemberActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/add_member_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:elevation="4dp" >
+
+
+    </androidx.appcompat.widget.Toolbar>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
