--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".views.AccountSettingsActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/account_settings_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:elevation="4dp"
+        tools:background="@color/purple_200"
+        >
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <ImageView
+        android:id="@+id/account_photo_image_view"
+        android:layout_width="208dp"
+        android:layout_height="208dp"
+        app:layout_constraintTop_toBottomOf="@id/account_settings_toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
