--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -12,7 +12,24 @@
         android:layout_height="64dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:elevation="4dp"
+        android:elevation="4dp" >
+
+        <EditText
+            android:id="@+id/search_bar_editText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Search Members..."
+            />
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <ListView
+        android:id="@+id/member_listView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/member_list_toolbar"
+        tools:listitem="@layout/member_list_item_layout"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
