Implement add member page, functionality

--- a/app/src/main/res/layout/activity_member_detail.xml
+++ b/app/src/main/res/layout/activity_member_detail.xml
@@ -16,4 +16,130 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <ImageView
+        android:id="@+id/member_detail_photo_image_view"
+        android:layout_width="208dp"
+        android:layout_height="208dp"
+        app:layout_constraintBottom_toTopOf="@+id/guide_horiz_40"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/member_detail_toolbar"
+        tools:src="@drawable/profile_pic_7" />
+
+    <TextView
+        android:id="@+id/member_detail_full_name_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guide_horiz_40"
+        tools:text="Shaina d'Orestes" />
+
+    <ImageView
+        android:id="@+id/member_detail_level_icon_imageView"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintStart_toEndOf="@id/member_detail_full_name_textView"
+        app:layout_constraintTop_toTopOf="@id/member_detail_full_name_textView"
+        app:layout_constraintBottom_toBottomOf="@id/member_detail_full_name_textView"
+        tools:src="@drawable/ic_laurel_platinum" />
+
+    <TextView
+        android:id="@+id/member_detail_id_label_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/member_detail_full_name_textView"
+        app:layout_constraintEnd_toStartOf="@id/guide_vert_45"
+        android:text="@string/member_detail_id_label" />
+
+    <TextView
+        android:id="@+id/member_detail_id_number_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/guide_vert_55"
+        app:layout_constraintTop_toTopOf="@id/member_detail_id_label_textView"
+        tools:text="#27" />
+
+    <TextView
+        android:id="@+id/member_detail_level_label_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/member_detail_id_label_textView"
+        app:layout_constraintEnd_toStartOf="@id/guide_vert_45"
+        android:text="@string/member_detail_level_label" />
+
+    <TextView
+        android:id="@+id/member_detail_level_type_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/guide_vert_55"
+        app:layout_constraintTop_toTopOf="@id/member_detail_level_label_textView"
+        tools:text="Platinum" />
+
+    <TextView
+        android:id="@+id/member_detail_phone_label_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/member_detail_level_label_textView"
+        app:layout_constraintEnd_toStartOf="@id/guide_vert_45"
+        android:text="@string/member_detail_phone_label" />
+
+    <TextView
+        android:id="@+id/member_detail_phone_number_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/guide_vert_55"
+        app:layout_constraintTop_toTopOf="@id/member_detail_phone_label_textView"
+        tools:text="555-555-5555" />
+
+    <TextView
+        android:id="@+id/member_detail_email_label_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/member_detail_phone_label_textView"
+        app:layout_constraintEnd_toStartOf="@id/guide_vert_45"
+        android:text="@string/member_detail_email_label" />
+
+    <TextView
+        android:id="@+id/member_detail_email_address_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/guide_vert_55"
+        app:layout_constraintTop_toTopOf="@id/member_detail_email_label_textView"
+        tools:text="my.email@gmail.com" />
+
+    <ImageButton
+        android:id="@+id/member_detail_call_imageButton"
+        android:layout_width="0dp"
+        android:layout_height="52dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_phone_24px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/member_detail_email_label_textView"
+        app:layout_constraintWidth_percent=".6" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_vert_45"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".45" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_vert_55"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".55" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_horiz_40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".5" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
