--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.AccountSettingsActivity">
+    tools:context=".views.AccountSettingsActivity"
+    style="@style/BackgroundAccount">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/account_settings_toolbar"
@@ -12,56 +13,56 @@
         android:layout_height="64dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:elevation="4dp"
-        tools:background="@color/purple_200" >
+        android:elevation="4dp" >
 
     </androidx.appcompat.widget.Toolbar>
 
     <ImageView
         android:id="@+id/account_photo_image_view"
-        android:layout_width="208dp"
-        android:layout_height="208dp"
+        style="@style/StandardProfilePhoto"
         android:src="@drawable/profile_pic_8"
         app:layout_constraintBottom_toTopOf="@+id/guide_horiz_50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/account_settings_toolbar" />
 
-    <TextView
-        android:id="@+id/account_user_name_label_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/account_user_name_label"
-        app:layout_constraintStart_toStartOf="@id/account_user_name_editText"
-        app:layout_constraintTop_toBottomOf="@+id/guide_horiz_50" />
+    <ImageView
+        android:id="@+id/account_user_icon_imageView"
+        style="@style/AccountLabelIcon"
+        android:src="@drawable/ic_perm_identity_24px"
+        app:layout_constraintBottom_toBottomOf="@+id/account_user_name_editText"
+        app:layout_constraintEnd_toStartOf="@id/guide_vert_20"
+        app:layout_constraintTop_toTopOf="@+id/account_user_name_editText" />
+
 
     <EditText
         android:id="@+id/account_user_name_editText"
+        style="@style/StandardEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent=".7"
-        app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/account_user_name_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/account_user_name_label_textView"
-        android:hint="@string/prefs_user_default" />
+        app:layout_constraintStart_toStartOf="@+id/guide_vert_20"
+        app:layout_constraintTop_toTopOf="@+id/guide_horiz_50" />
 
-    <TextView
-        android:id="@+id/account_password_label_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/account_password_label"
-        app:layout_constraintStart_toStartOf="@id/account_user_name_editText"
-        app:layout_constraintTop_toBottomOf="@+id/account_user_name_editText" />
+    <ImageView
+        android:id="@+id/account_password_icon_imageView"
+        style="@style/AccountLabelIcon"
+        android:src="@drawable/ic_vpn_key_24px"
+        app:layout_constraintBottom_toBottomOf="@+id/account_password_editText"
+        app:layout_constraintEnd_toStartOf="@id/guide_vert_20"
+        app:layout_constraintTop_toTopOf="@+id/account_password_editText" />
 
     <EditText
         android:id="@+id/account_password_editText"
+        style="@style/PasswordEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/prefs_password_default"
+        android:hint="@string/account_password_label"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_password_label_textView"
-        app:layout_constraintWidth_percent=".7" />
+        app:layout_constraintStart_toStartOf="@+id/guide_vert_20"
+        app:layout_constraintTop_toBottomOf="@+id/account_user_name_editText"
+        android:imeOptions="actionDone"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_horiz_50"
@@ -69,5 +70,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent=".5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_vert_20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
