--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,55 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.LoginActivity">
+    tools:context=".views.LoginActivity"
+    style="@style/BackgroundLoginList" >
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        style="@style/LoginTitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Gym Member Manager"
-        app:layout_constraintBottom_toTopOf="@+id/guide_horiz_45"
+        android:text="@string/login_title"
+        app:layout_constraintBottom_toTopOf="@+id/guide_horiz_5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guide_horiz_2" />
 
     <EditText
         android:id="@+id/input_user_editText"
+        style="@style/StandardEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent=".7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guide_horiz_45"
-        android:hint="User name"
+        app:layout_constraintTop_toBottomOf="@id/guide_horiz_5"
+        android:hint="@string/login_user_name_hint"
         />
 
     <EditText
         android:id="@+id/input_password_editText"
+        style="@style/PasswordEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintWidth_percent=".7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/input_user_editText"
-        android:hint="Password"
+        android:hint="@string/login_password_hint"
+        android:imeOptions="actionDone"
         />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/sign_in_button"
-        android:layout_width="match_parent"
+        style="@style/StandardButton"
+        android:layout_width="0dp"
         android:layout_height="52dp"
         android:layout_margin="16dp"
+        android:text="@string/login_button"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="Sign In"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/input_password_editText" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guide_horiz_45"
+        android:id="@+id/guide_horiz_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".45" />
+        app:layout_constraintGuide_percent=".5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guide_horiz_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
