--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.MemberListActivity">
+    tools:context=".views.MemberListActivity"
+    style="@style/BackgroundLoginList">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/member_list_toolbar"
@@ -34,6 +35,7 @@
 
     <TextView
         android:id="@+id/empty_member_list_message_textView"
+        style="@style/BackgroundTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/member_list_toolbar"
