Fixed some bugs (mainly phone int to string)

--- a/app/src/main/res/layout/activity_member_list.xml
+++ b/app/src/main/res/layout/activity_member_list.xml
@@ -20,6 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/member_search_bar_hint"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
             />
 
     </androidx.appcompat.widget.Toolbar>
