--- a/app/src/main/res/layout/activity_add_member.xml
+++ b/app/src/main/res/layout/activity_add_member.xml
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guide_vert_15"
         app:layout_constraintTop_toBottomOf="@id/guid_horiz_55"
-        android:inputType="number"/>
+        android:inputType="phone" />
 
     <ImageView
         android:id="@+id/add_email_icon_imageView"
